--- a/css/index.css
+++ b/css/index.css
@@ -120,8 +120,40 @@ h3 {
     color: #494D5F
 }
 
-footer p{
+#copy{
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
     font-weight: 500;
-    color: #494D5F
+    color: #494D5F;
+    text-decoration:underline;
+}
+
+footer .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #494D5F;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #494D5F;
+    color: white;
+  }
+
+  .fa-linkedin {
+    background: #494D5F;
+    color: white;
+  }
+
