--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,11 @@ body {
     background: black;
   }
 
+  .line-2 {
+    height: 2px;
+    background: black;
+  }
+
 .hero p {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -99,19 +104,157 @@ h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 48px;
-    color: #8458B3
+    color: #8458B3;
+    margin: 9px;
 }
 
 h2 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 40px;
 }
 
 h3 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
+    font-size: 28px;
 }
+
+
+.content1 h3 {
+    text-align: left;
+    margin-left: 237px;
+}
+
+.backing-block1{
+    float: left;
+    background-color: #31A6BF;
+    margin-left: 100px;
+}
+
+.backing-block1 h2{
+    margin-right: 218px;
+}
+
+.backing-block1 p {
+    font-size: 32px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-left: 487px;
+    text-align: left;
+}
+
+.backing-block1 img {
+    float: left;
+    height: 411px;
+    margin-left: 210px;
+
+}
+
+
+
+.content2 h3 {
+    text-align: left;
+    margin-left: 233px;
+    margin-right: 50px;
+}
+
+.backing-block2{
+    float: left;
+    background-color: #DFC8E7;
+    margin-left: 101px;
+}
+
+.backing-block2 h2{
+    margin-right: 264px;
+}
+
+.backing-block2 p {
+    font-size: 32px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-left: 487px;
+    text-align: left;
+}
+
+.backing-block2 img {
+    float: left;
+    height: 411px;
+    margin-left: 210px;
+
+}
+
+
+.content3 h3 {
+    text-align: left;
+    margin-left: 237px;
+}
+
+.backing-block3{
+    float: left;
+    background-color: #D79FA0;
+    margin-left: 96px;
+    margin-right: 144px;
+}
+
+.backing-block3 h2{
+        margin-left: 500px;
+        text-align: left;
+        padding-left: -27px;
+        padding-left: 86px;
+}
+
+.backing-block3 p {
+    font-size: 32px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-left: 586px;
+    text-align: left;
+}
+
+.backing-block3 img {
+    float: left;
+    height: 300px;
+    margin-left: 70px;
+
+}
+
+.content4 h3 {
+    text-align: left;
+    margin-left: 164px;
+}
+
+.backing-block4{
+    float: left;
+    background-color: #4B7F85;
+    margin-left: 98px;
+    margin-right: 184px;
+}
+
+.backing-block4 h2{
+    margin-left: 73px;
+}
+
+.backing-block4 p {
+    font-size: 32px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-left: 640px;
+    text-align: left;
+}
+
+.backing-block4 img {
+    float: left;
+    height: 300px;
+    margin-left: 59px;
+
+}
+
+.Footer {
+margin-top: 50px;
+}
+
+
 
 #intouch {
     font-family: 'Poppins', sans-serif;
